--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <h4>Appliance Repair Service</h4>
                   <p> <i class="fa fa-check-circle" style="color:greenyellow"> </i> Fast, reliable service &nbsp<i
                         class="fa fa-check-circle" style="color:greenyellow">
-                     </i> County Wide coverage &nbsp<i class="fa fa-check-circle" style="color:greenyellow"> </i>
+                     </i> County wide coverage &nbsp<i class="fa fa-check-circle" style="color:greenyellow"> </i>
                      Same/next
                      day
                      appointments</p>
@@ -231,22 +231,25 @@
             </div>
 
 
-            <div class="col-sm-3">
+            <div class="col-sm-3 ">
                <div style="color:whitesmoke;margin-top: 60px;" class="item">
                   <!-- <h4 class="text-uppercase">Contact Info</h4> -->
-                  <h5><strong>Service Areas:</strong></h5>
-                  <p><img src="imgs/location.png" alt="#" /> Greater Los Angeles County <br>
+
+                  <h5> <strong>Service Areas:</strong></h5>
+                  <p> <img src="imgs/location.png" style="margin:auto" alt="#" />
+                     Greater Los Angeles County <br>
                      (Call to confirm if outside service area)</p>
+
                   <h5 style="margin-top: 25px;"><strong>Working Hours:</strong></h5>
-                  <p><img src="imgs/hours.png" alt="#" />
+                  <p> <img src="imgs/hours.png" style="margin:auto" alt="#" />
                      9:00am-6:00pm PST</p>
 
                </div>
                <div style="color:whitesmoke" class="item">
                   <h5 style="margin-top: 25px;"><strong>Phone Number:</strong></h5>
-                  <p><img src="imgs/phone_icon.png" alt="#" /> (323) 989 – 2999</p>
+                  <p><img src="imgs/phone_icon.png" style="margin:auto" alt="#" /> (323) 989 – 2999</p>
                   <h5 style="margin-top: 25px;"><strong>Email Address:</strong></h5>
-                  <p><img src="imgs/mail.png" alt="#" />
+                  <p><img src="imgs/mail.png" style="margin:auto" alt="#" />
                      info@magnumappliance.com</p>
                </div>
             </div>
